--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 			font-weight: normal;
 	}
 
-/* Start Base styles */
 html{
 	font-size: 14px;
 }
@@ -17,12 +16,11 @@ body{
 	font-family: "ArialRegular", sans-serif;
 	font-size: 14px;
 	color: #000000;
-	background-color: #ffffff;
+	background-color: #fafafa;
 }
 
 h1{
 	font-size: 3.5715rem; /* 50px/14 */
-	color: #ffffff;
 	text-transform: uppercase;
 }
 
@@ -39,30 +37,154 @@ h4{
 	font-size: 1.2857rem; /* 18px/14 */
 }
 
-p{
-	font-size: 14px;
+p {
+    font-family: "ArialRegular", sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
-a{
-	color: #000000;
+i,
+span {
+    display: inline-block;
 }
-a:hover{
-	text-decoration: none;
-	color: inherit;
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
 }
-/* End Base styles */
-/* Start Buttons */
 
-/* End Buttons */
-/* Start header */
-
-header{
-	color: #fff;
-	height: 40px;
+/* Start Navigation */
+/*header{
 	background-color: #003765;
+}*/
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
-/* End header */
-/* Start section */
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+/* End Navigation */
+/***** Start Sidebar *****/
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+#sidebar ul li a {
+    text-align: left;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right: 0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li a i {
+    margin-right: 10px;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+/***** End Sidebar *****/
+/* Start dashboard_section */
 .circle{
 	border: 1px solid green;
 	border-radius: 50%;
@@ -86,11 +208,6 @@ header{
 	margin: auto;
 }
 
-
-
-
-/* End section */
-/* Start stars section */
 .manager_photo{
 	border-radius: 50%;	
 	max-height: 100px;
@@ -112,7 +229,6 @@ header{
 	background-size: auto 100%;
 	padding-left: 22px;
 }
-
 
 .stars {
   cursor: pointer;
@@ -148,29 +264,79 @@ header{
   fill: #d8d8d8;
 }
 
-.stars_hint{
+/* End dashboard_section */
 
-}
 
-/* End stars section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
-/* Start section */
 
-/* End section */
+/******* Start Media Query *******/
+/* Start max-width: 992px and min-width: 1199px */
+@media (min-width: 992px) and (max-width: 1199px)  {
+
+}/* End max-width: 992px and min-width: 1199px */
+/* Start max-width: 991px*/
+@media (max-width: 991px)  {
+
+
+} /* End max-width: 991px*/
+/* Start max-width: 768px */
+@media (max-width: 768px) {
+    #sidebar {
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+        margin-left: -80px !important;
+    }
+    .dropdown-toggle::after {
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+        transform: translateX(50%);
+    }
+    #sidebar.active {
+        margin-left: 0 !important;
+    }
+    #sidebar .sidebar-header h3,
+    #sidebar .CTAs {
+        display: none;
+    }
+    #sidebar .sidebar-header strong {
+        display: block;
+    }
+    #sidebar ul li a {
+        padding: 20px 10px;
+    }
+    #sidebar ul li a span {
+        font-size: 0.85em;
+    }
+    #sidebar ul li a i {
+        margin-right: 0;
+        display: block;
+    }
+    #sidebar ul ul a {
+        padding: 10px !important;
+    }
+    #sidebar ul li a i {
+        font-size: 1.3em;
+    }
+    #sidebar {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+
+}/* End max-width: 768px*/
+/* Start max-width: 575px */
+@media (max-width: 575px)  {
+
+
+} /* End max-width: 575px */
+/******* End Media Query *******/
