--- a/style.css
+++ b/style.css
@@ -92,52 +92,22 @@ a:focus {
 }
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 160px;
+    max-width: 160px;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
 }
 
 #sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
+    min-width: 0px;
+    max-width: 0px;
     text-align: center;
+    display: none; /*TODO repair this */ 
 }
 
 #sidebar ul li a {
     text-align: left;
-}
-
-#sidebar.active ul li a {
-    padding: 20px 10px;
-    text-align: center;
-    font-size: 0.85em;
-}
-
-#sidebar.active ul li a i {
-    margin-right: 0;
-    display: block;
-    font-size: 1.8em;
-    margin-bottom: 5px;
-}
-
-#sidebar.active ul ul a {
-    padding: 10px !important;
-}
-
-#sidebar.active .dropdown-toggle::after {
-    top: auto;
-    bottom: 10px;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-}
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
 }
 
 #sidebar ul.components {
@@ -145,42 +115,26 @@ a:focus {
 }
 
 #sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
     display: block;
 }
 
-#sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
-}
 
-#sidebar ul li a i {
-    margin-right: 10px;
-}
 
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
+#sidebar ul li a i{
+    font-size: 22px;
     display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
+    transition: transform .4s;
 }
 
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #6d7fcc;
+#sidebar ul li a:hover i{
+	transform: scale(1.1, 1.1);
+	transform-origin: left;
+}
+
+
+#sidebar ul li a span{
+    font-size: 12px;
+    display: block;
 }
 
 /***** End Sidebar *****/
@@ -270,10 +224,6 @@ ul ul a {
 
 
 
-
-
-
-
 /******* Start Media Query *******/
 /* Start max-width: 992px and min-width: 1199px */
 @media (min-width: 992px) and (max-width: 1199px)  {
@@ -292,24 +242,11 @@ ul ul a {
         text-align: center;
         margin-left: -80px !important;
     }
-    .dropdown-toggle::after {
-        top: auto;
-        bottom: 10px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
-    }
+
     #sidebar.active {
         margin-left: 0 !important;
     }
-    #sidebar .sidebar-header h3,
-    #sidebar .CTAs {
-        display: none;
-    }
-    #sidebar .sidebar-header strong {
-        display: block;
-    }
+
     #sidebar ul li a {
         padding: 20px 10px;
     }
@@ -328,9 +265,6 @@ ul ul a {
     }
     #sidebar {
         margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
     }
 
 }/* End max-width: 768px*/
