--- a/style.css
+++ b/style.css
@@ -100,41 +100,125 @@ a:focus {
 }
 
 #sidebar.active {
-    min-width: 0px;
-    max-width: 0px;
+    min-width: 80px;
+    max-width: 80px;
     text-align: center;
-    display: none; /*TODO repair this */ 
+}
+
+#sidebar.active .sidebar-header h3,
+#sidebar.active .CTAs {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
 }
 
 #sidebar ul li a {
     text-align: left;
 }
 
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right: 0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar .sidebar-header strong {
+    display: none;
+    font-size: 1.8em;
+}
+
 #sidebar ul.components {
     padding: 20px 0;
+    border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
     display: block;
 }
 
-
-
-#sidebar ul li a i{
-    font-size: 22px;
-    display: block;
-    transition: transform .4s;
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
 }
 
-#sidebar ul li a:hover i{
-	transform: scale(1.1, 1.1);
-	transform-origin: left;
+#sidebar ul li a i {
+    margin-right: 10px;
 }
 
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
 
-#sidebar ul li a span{
-    font-size: 12px;
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
     display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
 }
 
 /***** End Sidebar *****/
@@ -169,21 +253,14 @@ a:focus {
 }
 
 .manager_telegram{
-	background-image: url(img/telegram_icon.svg);
-	background-repeat: no-repeat;
-	background-position: left center;
-	background-size: auto 100%;
-	padding-left: 22px;
+
 }
 
 .manager_telephone{
-	background-image: url(img/telephone_icon.svg);
-	background-repeat: no-repeat;
-	background-position: left center;
-	background-size: auto 100%;
-	padding-left: 22px;
+
 }
 
+/* Start Stars rating */
 .stars {
   cursor: pointer;
 }
@@ -217,13 +294,8 @@ a:focus {
 .stars[data-stars="5"] .star:nth-child(5) ~ .star polygon {
   fill: #d8d8d8;
 }
-
+/* End Stars rating */
 /* End dashboard_section */
-
-
-
-
-
 /******* Start Media Query *******/
 /* Start max-width: 992px and min-width: 1199px */
 @media (min-width: 992px) and (max-width: 1199px)  {
@@ -236,17 +308,30 @@ a:focus {
 } /* End max-width: 991px*/
 /* Start max-width: 768px */
 @media (max-width: 768px) {
-    #sidebar {
+#sidebar {
         min-width: 80px;
         max-width: 80px;
         text-align: center;
         margin-left: -80px !important;
     }
-
+    .dropdown-toggle::after {
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+        transform: translateX(50%);
+    }
     #sidebar.active {
         margin-left: 0 !important;
     }
-
+    #sidebar .sidebar-header h3,
+    #sidebar .CTAs {
+        display: none;
+    }
+    #sidebar .sidebar-header strong {
+        display: block;
+    }
     #sidebar ul li a {
         padding: 20px 10px;
     }
@@ -265,6 +350,9 @@ a:focus {
     }
     #sidebar {
         margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
     }
 
 }/* End max-width: 768px*/
