--- a/style.css
+++ b/style.css
@@ -59,23 +59,6 @@ a:focus {
 }
 
 /* Start Navigation */
-/*header{
-	background-color: #003765;
-}*/
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
 
 /* End Navigation */
 /***** Start Sidebar *****/
@@ -92,56 +75,31 @@ a:focus {
 }
 
 #sidebar {
-    min-width: 160px;
-    max-width: 160px;
+    min-width: 136px;
+    max-width: 136px;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
-}
-
-#sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
-    text-align: center;
 }
 
 #sidebar ul li a {
     text-align: left;
 }
 
-#sidebar.active ul li a {
-    padding: 20px 10px;
-    text-align: center;
-    font-size: 0.85em;
+.menu_icon{
+	width: 20px;
+	text-align: center;
+	margin-right: 4px;
 }
 
-#sidebar.active ul li a i {
-    margin-right: 0;
-    display: block;
-    font-size: 1.8em;
-    margin-bottom: 5px;
-}
 
-#sidebar.active ul ul a {
-    padding: 10px !important;
-}
-
-#sidebar.active .dropdown-toggle::after {
-    top: auto;
-    bottom: 10px;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-}
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul li a {
-    padding: 10px;
+    padding: 8px;
     font-size: 1.1em;
     display: block;
 }
@@ -149,10 +107,6 @@ a:focus {
 #sidebar ul li a:hover {
     color: #7386D5;
     background: #fff;
-}
-
-#sidebar ul li a i {
-    margin-right: 10px;
 }
 
 #sidebar ul li.active>a,
@@ -177,17 +131,6 @@ ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
     background: #6d7fcc;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
 }
 
 /***** End Sidebar *****/
@@ -278,45 +221,36 @@ a.article:hover {
 /* Start max-width: 768px */
 @media (max-width: 768px) {
 #sidebar {
-        min-width: 80px;
-        max-width: 80px;
-        text-align: center;
-        margin-left: -80px !important;
-    }
-    .dropdown-toggle::after {
-        top: auto;
-        bottom: 10px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
-    }
-    #sidebar.active {
-        margin-left: 0 !important;
-    }
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
 
-    #sidebar ul li a {
-        padding: 20px 10px;
-    }
-    #sidebar ul li a span {
-        font-size: 0.85em;
-    }
-    #sidebar ul li a i {
-        margin-right: 0;
-        display: block;
-    }
-    #sidebar ul ul a {
-        padding: 10px !important;
-    }
-    #sidebar ul li a i {
-        font-size: 1.3em;
-    }
-    #sidebar {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
+#sidebar ul li a {
+    padding: 12px 8px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar ul li a i {
+    margin-right: 0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar ul ul a {
+    padding: 6px !important;
+}
+
+#sidebar .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
 
 }/* End max-width: 768px*/
 /* Start max-width: 575px */
