--- a/style.css
+++ b/style.css
@@ -1,45 +1,38 @@
-@font-face {
-			font-family: "ArialRegular";
-			src: url("/fonts/ArialRegular/ArialRegular.eot");
-			src: url("/fonts/ArialRegular/ArialRegular.eot?#iefix")format("embedded-opentype"),
-			url("/fonts/ArialRegular/ArialRegular.woff") format("woff"),
-			url("/fonts/ArialRegular/ArialRegular.ttf") format("truetype");
-			font-style: normal;
-			font-weight: normal;
-	}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');*/
 
 html{
 	font-size: 14px;
 }
 
 body{
-	font-family: "ArialRegular", sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	color: #000000;
-	background-color: #fafafa;
+	background-color: #fff;
 }
 
 h1{
-	font-size: 3.5715rem; /* 50px/14 */
+	font-size: 1.7142857rem; /* 24px/14 */
 	text-transform: uppercase;
 }
 
 h2{
-	font-size: 2.42857rem; /* 34px/14 */
+	font-size: 1.42857rem; /* 20px/14 */
 	text-transform: uppercase;
 }
 
 h3{
-	font-size: 1.715rem; /* 24px/14 */
-}
-
-h4{
 	font-size: 1.2857rem; /* 18px/14 */
 }
 
+h4{
+	font-size: 1.142857rem; /* 16px/14 */
+}
+
 p {
-    font-family: "ArialRegular", sans-serif;
-    font-size: 1.1em;
+    font-size: 1rem; /* 14px/14 */
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
@@ -58,9 +51,77 @@ a:focus {
     transition: all 0.3s;
 }
 
-/* Start Navigation */
+/* Start header */
+header{
+	background: #003765;
+	padding: 4px 0px;
+	color: #fff;
+}
 
-/* End Navigation */
+header p{
+	color: #fff;
+}
+
+.search_box .input-group input{
+	border-radius: 20px 0px 0px 20px;
+	padding: 2px 4px 2px 10px;
+	border: 0px solid white;
+}
+
+.search_box .input-group .input-group-append{
+	border-radius: 0px 20px 20px 0px;
+}
+
+.search_button{
+	background-color: #fff;
+	padding: 0;
+	border: 0px;
+	color: #777;
+	font-size: 20px;
+	line-height: 20px;
+	border-radius: 0px 20px 20px 0px;
+	width: 36px;
+}
+
+.input-group-append{
+	border: 0px solid white;
+	box-shadow: none;
+}
+
+.header_info_box{
+	font-size: 14px;
+	line-height: 14px;
+	text-align: center;
+}
+
+.header_info_box p{
+	font-size: 14px;
+	line-height: 14px;
+}
+
+.header_info_box i{
+	font-size: 20px;
+}
+
+.info_money{
+	width: 60px;
+}
+
+.info_userid{
+	width: 100px;
+}
+
+.info_username{
+	width: 136px;
+}
+
+.info_logout_button{
+	width: 60px;	
+}
+
+
+
+/* End header */
 /***** Start Sidebar *****/
 .wrapper {
     display: flex;
@@ -69,7 +130,6 @@ a:focus {
 
 #content {
     width: 100%;
-    padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
 }
@@ -77,9 +137,10 @@ a:focus {
 #sidebar {
     min-width: 136px;
     max-width: 136px;
-    background: #7386D5;
-    color: #fff;
+    background: transparent;
     transition: all 0.3s;
+    border-right: 1px solid #d2d2d2;
+    color: #003765;
 }
 
 #sidebar ul li a {
@@ -92,27 +153,25 @@ a:focus {
 	margin-right: 4px;
 }
 
-
-
 #sidebar ul.components {
-    padding: 20px 0;
+    padding: 0 0 4px;
 }
 
 #sidebar ul li a {
-    padding: 8px;
+    padding: 8px 2px 8px 8px;
     font-size: 1.1em;
     display: block;
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #00a2d9;
     background: #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: #00a2d9;
 }
 
 a[data-toggle="collapse"] {
@@ -130,11 +189,88 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #00a2d9;
 }
 
 /***** End Sidebar *****/
+/***** Start Buttons *****/
+.button_standart {
+    display: inline-block;
+    padding: 0 16px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    border: 1px solid #00a2d9;
+    background-color: transparent;
+   
+    font-size: 18px;
+    font-weight: 100;
+    color: #00a2d9;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all .3s;
+}
+
+.button_standart:hover {
+    background-color: #00a2d9;
+    color: #fff;
+}
+
+.button_refund{
+
+}
+
+/***** End Buttons *****/
 /* Start dashboard_section */
+.dasbord_artbord{
+	padding: 20px 10px 20px 20px;
+}
+
+.block_heading{
+	font-size: 16px;
+	color: #004987;
+	margin-bottom: 20px;
+}
+
+.block_heading a{
+	text-decoration: underline;
+}
+
+
+
+table{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+table td a{
+	color: #00a2d9;
+}
+
+table td:hover a{
+	text-decoration: underline;
+	color: #00a2d9;
+}
+
+.total_amount{
+	color: #000;
+	font-size: 18px;
+	font-weight: 600;
+}
+
+
+.cargo_block{
+	padding-top: 26px;
+}
+
+.cargo_stage i{
+	font-size: 40px;
+	color: #00a2d9;
+}
+
 .circle{
 	border: 1px solid green;
 	border-radius: 50%;
@@ -145,10 +281,11 @@ ul ul a {
 }
 
 .circle .circle_number{
-	width: 36px;
+	width: 60px;
 	height: 36px;
-	font-style: 36px;
 	line-height: 36px;
+	font-size: 29px;
+	color: #00a2d9;
 
 	position: absolute;
 	top: 0;
@@ -158,20 +295,26 @@ ul ul a {
 	margin: auto;
 }
 
+.total_icon{
+	margin-top: 22px;
+}
+
+.manager_block{
+	margin-top: 26px;
+}
+
 .manager_photo{
 	border-radius: 50%;	
 	max-height: 100px;
 	max-width: 100px;
 }
 
-.manager_telegram{
-
+.icon_box{
+	width: 32px;
+	font-size: 24px;
+	text-align: center;
+	color: #00a2d9;
 }
-
-.manager_telephone{
-
-}
-
 /* Start Stars rating */
 .stars {
   cursor: pointer;
